# ROS

./: .gitignore  .gitignore_global  README.md
Curse/: 1_arduinobot.urdf.xacro  README.md  arduinobot_interface.h  display.launch
arduinobot_ws/devel/: .catkin  .rosinstall  local_setup.sh
arduinobot_ws/src/arduinobot_bringup/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_controller/config/: trajectory_controllers.yaml
arduinobot_ws/src/arduinobot_controller/launch/: controller.launch
arduinobot_ws/src/arduinobot_controller/script/: angles_converter.py
arduinobot_ws/src/arduinobot_controller/src/: angles_converter.cpp
arduinobot_ws/src/arduinobot_controller/srv/: AnglesConverter.srv
arduinobot_ws/src/arduinobot_moveit/: .setup_assistant  package.xml
arduinobot_ws/src/arduinobot_remote/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_remote/action/: ArduinobotTask.action
arduinobot_ws/src/arduinobot_remote/script/: alexa_interface.py  task_server.py
arduinobot_ws/src/arduinobot_remote/scripts/: task_server.py
arduinobot_ws/src/arduinobot_test/: CMakeLists.txt  package.xml
arduinobot_ws/src/arduinobot_test/script/: simple_action_server.py  simple_publisher.py  simple_service.py  simple_service_client.py  simple_subscriber.py  simple_timer.py
arduinobot_ws/src/arduinobot_test/src/: simple_service.cpp  simple_service_client.cpp
spiderrobot_ws/devel/: .catkin  local_setup.sh
spiderrobot_ws/src/spiderrobot_description/: CMakeLists.txt  package.xml
(+136 files in other folders)
